Only transaction not completed are displayed in the first two tiles

--- a/src/index.html
+++ b/src/index.html
@@ -128,7 +128,7 @@
                                                 <!-- <th class="serial">#</th> -->
                                                 <th>Product</th>
                                                 <th>Quantity</th>
-                                                <th>Status</th>
+                                                <!-- <th>Status</th> -->
                                                 <th>Action</th>
                                             </tr>
                                         </thead>
@@ -155,14 +155,14 @@
                     <div class="col-xl-4">
                         <div class="card">
                             <div class="card-body">
-                                <h4 class="box-title">Available Products</h4>
+                                <h4 class="box-title">Available Stock</h4>
                             </div>
                             <div class="card-body--">
                                 <div class="table-stats order-table ov-h">
                                     <table class="table ">
                                         <thead>
                                             <tr>
-                                                <th class="serial">#</th>
+                                                <!-- <th class="serial">#</th> -->
                                                 <th>Product</th>
                                                 <th>Quantity</th>
                                                 <th>Action</th>
