--- a/src/index.html
+++ b/src/index.html
@@ -26,9 +26,19 @@
 
         <div class="navbar-header">
             <div class="row justify-content-center">
-                <a class="navbar-brand" href="./"><img style="height: 200px; width: auto;"
+                <a class="navbar-brand" href="./"><img style="height: 250px; width: auto;"
                         src="./assets/images/logo.png" alt="Logo"></a>
                 <p id="accountAddress" class="text-center">Account</p>
+                <div style="font-family: 'Montserrat', sans-serif; background-color: rgba(0, 0, 0, 0)" class="jumbotron">
+                    <h1 class="display-4">Introducing Souq-Chain</h1>
+                    <p class="lead">Bridging the gap between the consumers and producers by making transactions
+                        secure and simple.</p>
+                    <hr class="my-4">
+                    <!-- <p>Making transactions secure and simple.</p> -->
+                    <a class="btn btn-info btn-lg" id="fixedbutton" href="#" role="button">Got something to sell or
+                        buy?</a> &nbsp;&nbsp;&nbsp;
+                    <!-- <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a> -->
+                </div>
             </div>
         </div>
         <!-- </div> -->
@@ -226,7 +236,6 @@
         </div>
         <!-- /.orders -->
     </div>
-    <a href="#head"><i class="fa fa-plus-circle" aria-hidden="true" id="fixedbutton"></i></a>
 
     <!-- The Modal -->
     <div id="myModal" class="modal">
