--- a/src/index.html
+++ b/src/index.html
@@ -25,10 +25,10 @@
     <header id="header" class="header">
 
         <div class="navbar-header">
-            <div class="row justify-content-center">
+            <div class="jumbo row justify-content-center">
                 <a class="navbar-brand" href="./"><img style="height: 250px; width: auto;"
                         src="./assets/images/logo.png" alt="Logo"></a>
-                <p id="accountAddress" class="text-center">Account</p>
+                <!-- <p id="accountAddress" class="text-center">Account</p> -->
                 <div style="font-family: 'Montserrat', sans-serif; background-color: rgba(0, 0, 0, 0)" class="jumbotron">
                     <h1 class="display-4">Introducing Souq-Chain</h1>
                     <p class="lead">Bridging the gap between the consumers and producers by making transactions
@@ -201,7 +201,7 @@
                 <div class="col-xl-8">
                     <div class="card">
                         <div class="card-body">
-                            <h4 class="box-title">Past Orders</h4>
+                            <h4 class="box-title">Your Transactions</h4>
                         </div>
                         <div class="card-body--">
                             <div class="table-stats order-table ov-h">
@@ -212,7 +212,8 @@
                                             <th>Type</th>
                                             <th>Name</th>
                                             <th>Quantity</th>
-                                            <!-- <th>Status</th> -->
+                                            <th>Status</th>
+                                            <th>Action</th>
                                         </tr>
                                     </thead>
                                     <tbody id="myCompTrans">
