--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,11 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <script type="text/javascript">
         function googleTranslateElementInit() {
-            new google.translate.TranslateElement({ pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE, autoDisplay: false }, 'google_translate_element');
+            new google.translate.TranslateElement({
+                pageLanguage: 'en',
+                layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
+                autoDisplay: false
+            }, 'google_translate_element');
         }
     </script>
     <script src="http://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"
@@ -34,35 +38,33 @@
     <header id="header" class="header">
 
         <div class="navbar-header">
-            <!-- Begin Translation Button -->
-            <form id="form1" runat="server">
-                <div id="google_translate_element" style="display: none">
-                </div>
-                <ul style="text-align: right; margin-right: 15px;">
-                    <li>
-                        <a href="javascript:;" id="English" onclick="translateLanguage(this.id);"><span>English
-                            </span></a> &nbsp;
-                        <a href="javascript:;" id="Hindi" onclick="translateLanguage(this.id);"><span>Hindi
-                            </span></a>
-                    </li>
-                </ul>
-            </form>
-            <!-- End Translation Button -->
             <div class="jumbo row justify-content-center">
                 <a class="navbar-brand" href="./"><img style="height: 250px; width: auto;"
                         src="./assets/images/logo.png" alt="Logo"></a>
-                <!-- <p id="accountAddress" class="text-center">Account</p> -->
                 <div style="font-family: 'Montserrat', sans-serif; background-color: rgba(0, 0, 0, 0)"
                     class="jumbotron">
                     <h1 class="display-4">Introducing Souq-Chain</h1>
                     <p class="lead">Bridging the gap between the consumers and producers by making transactions
                         secure and simple.</p>
                     <hr class="my-4">
-                    <!-- <p>Making transactions secure and simple.</p> -->
                     <a class="btn btn-info btn-lg" id="fixedbutton" href="#" role="button">Got something to sell or
                         buy?</a> &nbsp;&nbsp;&nbsp;
                     <!-- <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a> -->
                 </div>
+                <!-- Begin Translation Button -->
+                <form id="form1" runat="server">
+                    <div id="google_translate_element" style="display: none">
+                    </div>
+                    <ul style="text-align: right; margin-right: 15px; list-style-type: none;">
+                        <li>
+                            <a href="javascript:;" id="English" onclick="translateLanguage(this.id);"><span>English
+                                </span></a> &nbsp;
+                            <a href="javascript:;" id="Hindi" onclick="translateLanguage(this.id);"><span>Hindi
+                                </span></a>
+                        </li>
+                    </ul>
+                </form>
+                <!-- End Translation Button -->
             </div>
         </div>
         <!-- </div> -->
