--- a/src/index.html
+++ b/src/index.html
@@ -44,8 +44,8 @@
                 <div style="font-family: 'Montserrat', sans-serif; background-color: rgba(0, 0, 0, 0)"
                     class="jumbotron">
                     <h1 class="display-4">Introducing Souq-Chain</h1>
-                    <p class="lead">Bridging the gap between the consumers and producers by making transactions
-                        secure and simple.</p>
+                    <p class="lead">Bridging the gap between consumers and producers by making transactions
+                        simple and secure.</p>
                     <hr class="my-4">
                     <a class="btn btn-info btn-lg" id="fixedbutton" href="#" role="button">Got something to sell or
                         buy?</a> &nbsp;&nbsp;&nbsp;
